# example-cython-poetry-pypi

./: .gitignore  README.rst  build.py  pyproject.toml
poetry_pypi_example/: main.py
